--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "axios": "0.27.2",
     "bootstrap": "5.2.0",
     "lodash": "4.17.21",
+    "nprogress": "0.2.0",
     "react": "18.2.0",
     "react-bootstrap": "2.4.0",
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
+    "react-loader-spinner": "5.3.4",
     "react-paginate": "8.1.3",
     "react-pro-sidebar": "0.7.1",
     "react-redux": "8.0.1",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "9.0.7",
+    "react-top-loading-bar": "2.3.1",
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
+    "redux-persist": "6.0.0",
     "redux-thunk": "2.4.1",
     "sass": "1.53.0",
     "web-vitals": "2.1.4"
